flutter_sfu_relay/windows/librelay.h

// CoordinatorAddPeer 添加 Peer 到自动管理
//
extern __declspec(dllexport) int CoordinatorAddPeer(char* roomID, char* peerID, int deviceType, int connectionType, int powerState);
// CoordinatorRemovePeer 移除 Peer
//
extern __declspec(dllexport) int CoordinatorRemovePeer(char* roomID, char* peerID);
// CoordinatorHandlePong 处理 Pong（心跳响应）
//
extern __declspec(dllexport) int CoordinatorHandlePong(char* roomID, char* peerID);
// CoordinatorSetRelay 设置当前 Relay（收到外部通知时）
//
extern __declspec(dllexport) int CoordinatorSetRelay(char* roomID, char* relayID, uint64_t epoch);
// CoordinatorReceiveClaim 接收 Relay 声明
// epoch: 选举纪元号
// score: 声明者分数（用于同 epoch 冲突解决）
//
extern __declspec(dllexport) int CoordinatorReceiveClaim(char* roomID, char* peerID, uint64_t epoch, double score);
// CoordinatorUpdateLocalDevice 更新本机设备信息
//
extern __declspec(dllexport) int CoordinatorUpdateLocalDevice(char* roomID, int deviceType, int connectionType, int powerState);
// CoordinatorInjectSFU 注入 SFU RTP 包
//
extern __declspec(dllexport) int CoordinatorInjectSFU(char* roomID, int isVideo, void* data, int dataLen);
// CoordinatorInjectLocal 注入本地分享 RTP 包
//
extern __declspec(dllexport) int CoordinatorInjectLocal(char* roomID, int isVideo, void* data, int dataLen);
// CoordinatorStartLocalShare 开始本地分享
//
extern __declspec(dllexport) int CoordinatorStartLocalShare(char* roomID, char* sharerID);
// CoordinatorStopLocalShare 停止本地分享
//
extern __declspec(dllexport) int CoordinatorStopLocalShare(char* roomID);
// CoordinatorGetStatus 获取协调器状态
//
extern __declspec(dllexport) char* CoordinatorGetStatus(char* roomID);
// CoordinatorIsRelay 检查本机是否是 Relay
//
extern __declspec(dllexport) int CoordinatorIsRelay(char* roomID);
// RelayRoomCreate 创建代理房间
// iceServersJSON: ICE 服务器配置 JSON
//
extern __declspec(dllexport) int RelayRoomCreate(char* roomID, char* iceServersJSON);
// RelayRoomDestroy 销毁代理房间
//
extern __declspec(dllexport) int RelayRoomDestroy(char* roomID);
// RelayRoomBecomeRelay 成为 Relay 节点
//
extern __declspec(dllexport) int RelayRoomBecomeRelay(char* roomID, char* peerID);
// RelayRoomIsRelay 检查是否是 Relay 节点
//
extern __declspec(dllexport) int RelayRoomIsRelay(char* roomID);
// RelayRoomAddSubscriber 添加订阅者
// 使用远端 Offer 创建 P2P 连接，返回 Answer SDP
//
extern __declspec(dllexport) char* RelayRoomAddSubscriber(char* roomID, char* peerID, char* offerSDP);
// RelayRoomRemoveSubscriber 移除订阅者
//
extern __declspec(dllexport) int RelayRoomRemoveSubscriber(char* roomID, char* peerID);
// RelayRoomGetSubscribers 获取订阅者列表
//
extern __declspec(dllexport) char* RelayRoomGetSubscribers(char* roomID);
// RelayRoomGetSubscriberCount 获取订阅者数量
//
extern __declspec(dllexport) int RelayRoomGetSubscriberCount(char* roomID);