flutter_sfu_relay/lib/flutter_sfu_relay_bindings_generated.dart


  /// CoordinatorAddPeer 添加 Peer 到自动管理
  int CoordinatorAddPeer(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
    int deviceType,
    int connectionType,
    int powerState,
  ) {
    return _CoordinatorAddPeer(
      roomID,
      peerID,
      deviceType,
      connectionType,
      powerState,
    );
  }

  late final _CoordinatorAddPeerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('CoordinatorAddPeer');
  late final _CoordinatorAddPeer =
      _CoordinatorAddPeerPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
        )
      >();

  /// CoordinatorRemovePeer 移除 Peer
  int CoordinatorRemovePeer(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _CoordinatorRemovePeer(roomID, peerID);
  }

  late final _CoordinatorRemovePeerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('CoordinatorRemovePeer');
  late final _CoordinatorRemovePeer =
      _CoordinatorRemovePeerPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// CoordinatorHandlePong 处理 Pong（心跳响应）
  int CoordinatorHandlePong(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _CoordinatorHandlePong(roomID, peerID);
  }

  late final _CoordinatorHandlePongPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('CoordinatorHandlePong');
  late final _CoordinatorHandlePong =
      _CoordinatorHandlePongPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// CoordinatorSetRelay 设置当前 Relay（收到外部通知时）
  int CoordinatorSetRelay(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> relayID,
    int epoch,
  ) {
    return _CoordinatorSetRelay(roomID, relayID, epoch);
  }

  late final _CoordinatorSetRelayPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
          )
        >
      >('CoordinatorSetRelay');
  late final _CoordinatorSetRelay =
      _CoordinatorSetRelayPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  /// CoordinatorReceiveClaim 接收 Relay 声明
  /// epoch: 选举纪元号
  /// score: 声明者分数（用于同 epoch 冲突解决）
  int CoordinatorReceiveClaim(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
    int epoch,
    double score,
  ) {
    return _CoordinatorReceiveClaim(roomID, peerID, epoch, score);
  }

  late final _CoordinatorReceiveClaimPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
            ffi.Double,
          )
        >
      >('CoordinatorReceiveClaim');
  late final _CoordinatorReceiveClaim =
      _CoordinatorReceiveClaimPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, double)
      >();

  /// CoordinatorUpdateLocalDevice 更新本机设备信息
  int CoordinatorUpdateLocalDevice(
    ffi.Pointer<ffi.Char> roomID,
    int deviceType,
    int connectionType,
    int powerState,
  ) {
    return _CoordinatorUpdateLocalDevice(
      roomID,
      deviceType,
      connectionType,
      powerState,
    );
  }

  late final _CoordinatorUpdateLocalDevicePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int, ffi.Int)
        >
      >('CoordinatorUpdateLocalDevice');
  late final _CoordinatorUpdateLocalDevice =
      _CoordinatorUpdateLocalDevicePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int, int, int)
      >();

  /// CoordinatorInjectSFU 注入 SFU RTP 包
  int CoordinatorInjectSFU(
    ffi.Pointer<ffi.Char> roomID,
    int isVideo,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
  ) {
    return _CoordinatorInjectSFU(roomID, isVideo, data, dataLen);
  }

  late final _CoordinatorInjectSFUPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Void>,
            ffi.Int,
          )
        >
      >('CoordinatorInjectSFU');
  late final _CoordinatorInjectSFU =
      _CoordinatorInjectSFUPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Void>, int)
      >();

  /// CoordinatorInjectLocal 注入本地分享 RTP 包
  int CoordinatorInjectLocal(
    ffi.Pointer<ffi.Char> roomID,
    int isVideo,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
  ) {
    return _CoordinatorInjectLocal(roomID, isVideo, data, dataLen);
  }

  late final _CoordinatorInjectLocalPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Void>,
            ffi.Int,
          )
        >
      >('CoordinatorInjectLocal');
  late final _CoordinatorInjectLocal =
      _CoordinatorInjectLocalPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Void>, int)
      >();

  /// CoordinatorStartLocalShare 开始本地分享
  int CoordinatorStartLocalShare(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> sharerID,
  ) {
    return _CoordinatorStartLocalShare(roomID, sharerID);
  }

  late final _CoordinatorStartLocalSharePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('CoordinatorStartLocalShare');
  late final _CoordinatorStartLocalShare =
      _CoordinatorStartLocalSharePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// CoordinatorStopLocalShare 停止本地分享
  int CoordinatorStopLocalShare(ffi.Pointer<ffi.Char> roomID) {
    return _CoordinatorStopLocalShare(roomID);
  }

  late final _CoordinatorStopLocalSharePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'CoordinatorStopLocalShare',
      );
  late final _CoordinatorStopLocalShare =
      _CoordinatorStopLocalSharePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();

  /// CoordinatorGetStatus 获取协调器状态
  ffi.Pointer<ffi.Char> CoordinatorGetStatus(ffi.Pointer<ffi.Char> roomID) {
    return _CoordinatorGetStatus(roomID);
  }

  late final _CoordinatorGetStatusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('CoordinatorGetStatus');
  late final _CoordinatorGetStatus =
      _CoordinatorGetStatusPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// CoordinatorIsRelay 检查本机是否是 Relay
  int CoordinatorIsRelay(ffi.Pointer<ffi.Char> roomID) {
    return _CoordinatorIsRelay(roomID);
  }

  late final _CoordinatorIsRelayPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'CoordinatorIsRelay',
      );
  late final _CoordinatorIsRelay =
      _CoordinatorIsRelayPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// RelayRoomCreate 创建代理房间
  /// iceServersJSON: ICE 服务器配置 JSON
  int RelayRoomCreate(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> iceServersJSON,
  ) {
    return _RelayRoomCreate(roomID, iceServersJSON);
  }

  late final _RelayRoomCreatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('RelayRoomCreate');
  late final _RelayRoomCreate =
      _RelayRoomCreatePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// RelayRoomDestroy 销毁代理房间
  int RelayRoomDestroy(ffi.Pointer<ffi.Char> roomID) {
    return _RelayRoomDestroy(roomID);
  }

  late final _RelayRoomDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'RelayRoomDestroy',
      );
  late final _RelayRoomDestroy =
      _RelayRoomDestroyPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// RelayRoomBecomeRelay 成为 Relay 节点
  int RelayRoomBecomeRelay(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _RelayRoomBecomeRelay(roomID, peerID);
  }

  late final _RelayRoomBecomeRelayPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('RelayRoomBecomeRelay');
  late final _RelayRoomBecomeRelay =
      _RelayRoomBecomeRelayPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// RelayRoomIsRelay 检查是否是 Relay 节点
  int RelayRoomIsRelay(ffi.Pointer<ffi.Char> roomID) {
    return _RelayRoomIsRelay(roomID);
  }

  late final _RelayRoomIsRelayPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'RelayRoomIsRelay',
      );
  late final _RelayRoomIsRelay =
      _RelayRoomIsRelayPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// RelayRoomAddSubscriber 添加订阅者
  /// 使用远端 Offer 创建 P2P 连接，返回 Answer SDP
  ffi.Pointer<ffi.Char> RelayRoomAddSubscriber(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
    ffi.Pointer<ffi.Char> offerSDP,
  ) {
    return _RelayRoomAddSubscriber(roomID, peerID, offerSDP);
  }

  late final _RelayRoomAddSubscriberPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('RelayRoomAddSubscriber');
  late final _RelayRoomAddSubscriber =
      _RelayRoomAddSubscriberPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// RelayRoomRemoveSubscriber 移除订阅者
  int RelayRoomRemoveSubscriber(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _RelayRoomRemoveSubscriber(roomID, peerID);
  }

  late final _RelayRoomRemoveSubscriberPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('RelayRoomRemoveSubscriber');
  late final _RelayRoomRemoveSubscriber =
      _RelayRoomRemoveSubscriberPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  /// RelayRoomGetSubscribers 获取订阅者列表
  ffi.Pointer<ffi.Char> RelayRoomGetSubscribers(ffi.Pointer<ffi.Char> roomID) {
    return _RelayRoomGetSubscribers(roomID);
  }

  late final _RelayRoomGetSubscribersPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('RelayRoomGetSubscribers');
  late final _RelayRoomGetSubscribers =
      _RelayRoomGetSubscribersPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// RelayRoomGetSubscriberCount 获取订阅者数量
  int RelayRoomGetSubscriberCount(ffi.Pointer<ffi.Char> roomID) {
    return _RelayRoomGetSubscriberCount(roomID);
  }

  late final _RelayRoomGetSubscriberCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'RelayRoomGetSubscriberCount',
      );
  late final _RelayRoomGetSubscriberCount =
      _RelayRoomGetSubscriberCountPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();
